--- a/mati/ejercicio_4_github.ipynb
+++ b/mati/ejercicio_4_github.ipynb
@@ -204,17 +204,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5, 3, 4, 2, 1]\n",
-      "[1, 2, 3, 4, 5]\n",
-      "5\n",
-      "1\n"
+      "no se permiten números fuera del dominio\n",
+      "[6, 6, 6, 6, 6]\n",
+      "[6, 6, 6, 6, 6]\n",
+      "6\n",
+      "6\n"
      ]
     }
    ],
@@ -232,6 +233,11 @@
     "    eleccion_usuario = int(input('Escoge un número al azar'))\n",
     "    lista_para_llenar.append(eleccion_usuario)\n",
     "\n",
+    "if eleccion_usuario > numero_de_elementos:\n",
+    "    print('no se permiten números fuera del dominio')    \n",
+    "elif eleccion_usuario < numero_de_elementos:\n",
+    "    print(lista_para_llenar)\n",
+    "\n",
     "random.shuffle(lista_para_llenar)\n",
     "print(lista_para_llenar)\n",
     "\n",
@@ -244,14 +250,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 4, 5]\n"
+      "[1]\n",
+      "20\n"
      ]
     }
    ],
@@ -269,6 +276,56 @@
     "      \n",
     "print(lst)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EL ELEMENTO ESCOGIDO ES ESTE: 1\n",
+      "EL ELEMENTO ESCOGIDO ES ESTE: 2\n",
+      "EL ELEMENTO ESCOGIDO ES ESTE: 3\n",
+      "[1, 2, 3]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Ejercicio 5: Declara una variable llamada lista y asigna una lista de números enteros como valor. \n",
+    "# Luego imprime el segundo elemento de la lista.\n",
+    "\n",
+    "lista_para_rellenar = [] #lista vacia que llenaremos usando un for\n",
+    "\n",
+    "numero_de_elementos = int(input('CUANTOS ELEMENTOS VAS A ESTUDIAR'))\n",
+    "\n",
+    "for _ in range(0,numero_de_elementos):\n",
+    "    elementos_del_usuario = int(input('AGREGA ALGÚN NÚMERO'))\n",
+    "    print(f'EL ELEMENTO ESCOGIDO ES ESTE: {elementos_del_usuario}')\n",
+    "    lista_para_rellenar.append(elementos_del_usuario)\n",
+    "    \n",
+    "print(lista_para_rellenar)\n",
+    "lista_para_rellenar[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
