--- a/mati/ejercicio_4_github.ipynb
+++ b/mati/ejercicio_4_github.ipynb
@@ -2,7 +2,75 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.283185307179586\n",
+      "3.141592653589793\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Ejercicio 3: Haz un programa que calcule el área y el perímetro de un círculo a partir del radio ingresado por el usuario.\n",
+    "#Recuerda que el área de un círculo se calcula como pi * r^2, y el perímetro como 2 * pi * r.\n",
+    "\n",
+    "import math\n",
+    "\n",
+    "radio = int(input('ingresa el valor del radio'))\n",
+    "\n",
+    "perimetro = 2 * math.pi * radio\n",
+    "area = math.pi * radio ** 2\n",
+    "print(perimetro)\n",
+    "print(area) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "range(0, 100)\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_10140\\478490744.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mnum\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrango\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mnum\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;36m2\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnum\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not iterable"
+     ]
+    }
+   ],
+   "source": [
+    "#Ejercicio 1: Haz un programa que imprima todos los números pares entre 1 y 100.\n",
+    "\n",
+    "cota_inferior = int(input('Coloca un mínimo incluyente al dominio'))\n",
+    "cota_superior = int(input('Coloca un máximo excluyente al dominio'))\n",
+    "rango = range(cota_inferior, cota_superior)\n",
+    "\n",
+    "#numeros = list(rango)\n",
+    "\n",
+    "print(rango)\n",
+    "\n",
+    "for num in rango:\n",
+    "    if num % 2 == 0:\n",
+    "        print((num))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -63,143 +131,13 @@
     }
    ],
    "source": [
-    "num = 2\n",
-    "while num <= 100:\n",
-    "    print(num)\n",
-    "    num = num + 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num = num + 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hola\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('hola')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6.283185307179586\n",
-      "3.141592653589793\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Ejercicio 3: Haz un programa que calcule el área y el perímetro de un círculo a partir del radio ingresado por el usuario.\n",
-    "#Recuerda que el área de un círculo se calcula como pi * r^2, y el perímetro como 2 * pi * r.\n",
-    "\n",
-    "import math\n",
-    "\n",
-    "radio = int(input('ingresa el valor del radio'))\n",
-    "\n",
-    "perimetro = 2 * math.pi * radio\n",
-    "area = math.pi * radio ** 2\n",
-    "print(perimetro)\n",
-    "print(area) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "range(0, 100)\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "10\n",
-      "12\n",
-      "14\n",
-      "16\n",
-      "18\n",
-      "20\n",
-      "22\n",
-      "24\n",
-      "26\n",
-      "28\n",
-      "30\n",
-      "32\n",
-      "34\n",
-      "36\n",
-      "38\n",
-      "40\n",
-      "42\n",
-      "44\n",
-      "46\n",
-      "48\n",
-      "50\n",
-      "52\n",
-      "54\n",
-      "56\n",
-      "58\n",
-      "60\n",
-      "62\n",
-      "64\n",
-      "66\n",
-      "68\n",
-      "70\n",
-      "72\n",
-      "74\n",
-      "76\n",
-      "78\n",
-      "80\n",
-      "82\n",
-      "84\n",
-      "86\n",
-      "88\n",
-      "90\n",
-      "92\n",
-      "94\n",
-      "96\n",
-      "98\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Ejercicio 1: Haz un programa que imprima todos los números pares entre 1 y 100.\n",
-    "\n",
-    "cota_inferior = int(input('Coloca un mínimo incluyente al dominio'))\n",
-    "cota_superior = int(input('Coloca un máximo excluyente al dominio'))\n",
-    "rango = range(cota_inferior, cota_superior)\n",
-    "\n",
-    "#numeros = list(rango)\n",
-    "\n",
-    "print(rango)\n",
-    "\n",
-    "for num in rango:\n",
-    "    if num % 2 == 0:\n",
-    "        print(num)"
+    "#otra version del ejercicio 1\n",
+    "i=0\n",
+    "while i<100:\n",
+    "    i+=1\n",
+    "    if i % 2 != 0:\n",
+    "        continue\n",
+    "    print(i)"
    ]
   },
   {
