--- a/mati/proyecto2.ipynb
+++ b/mati/proyecto2.ipynb
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -200,8 +200,8 @@
      "text": [
       "2\n",
       "LA ELECCIÓN DEL USUARIO ES: tijeras\n",
-      "0\n",
-      "LA ELECCIÓN DE LA COMPUTADORA ES: piedra\n",
+      "2\n",
+      "LA ELECCIÓN DE LA COMPUTADORA ES: tijeras\n",
       "empate\n"
      ]
     }
@@ -227,24 +227,19 @@
     "\n",
     "if indices_usuario == indices_computadora:\n",
     "    print('empate')\n",
-    "\n",
     "else:\n",
-    "    \n",
-    "if (indices_usuario == 0) and (indices_computadora == 1):\n",
-    "    print('ha ganado la computadora')\n",
-    "    if (indices_usuario == 0) and (indices_computadora == 2):\n",
-    "        print('ha ganado el usuario')\n",
-    "        if (indices_usuario == 1) and (indices_computadora == 2):\n",
-    "            print('ha ganado la computadora')\n",
-    "        elif (indices_usuario == 2) and (indices_computadora == 1):\n",
-    "            print('ha ganado el usuario')\n",
-    "    elif (indices_usuario == 2) and (indices_computadora == 0):\n",
+    "    if (indices_usuario == 0) and (indices_computadora == 1):\n",
     "        print('ha ganado la computadora')\n",
-    "elif (indices_usuario == 1) and (indices_computadora == 0):\n",
-    "    print('ha ganado el usuario')\n",
-    "else:\n",
-    "    print('empate')\n",
-    "#DETALLE: CUALQUIER COMBINACION QUE INVOLUCRE A TIJERAS SALE EMPATE ????"
+    "        if (indices_usuario == 0) and (indices_computadora == 2):\n",
+    "            print('ha ganado el usuario')\n",
+    "            if (indices_usuario == 1) and (indices_computadora == 2):\n",
+    "                print('ha ganado la computadora')\n",
+    "            elif (indices_usuario == 2) and (indices_computadora == 1):\n",
+    "                print('ha ganado el usuario')\n",
+    "        elif (indices_usuario == 2) and (indices_computadora == 0):\n",
+    "            print('ha ganado la computadora')\n",
+    "    elif (indices_usuario == 1) and (indices_computadora == 0):\n",
+    "        print('ha ganado el usuario')"
    ]
   },
   {
@@ -347,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
